--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preact": "^10.26.4",
     "react-bootstrap": "^2.10.9",
     "react-router-dom": "^7.5.3",
+    "styled-components": "^6.1.18",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
