--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/toolpad-core": "^0.1.46",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "dotenv": "^16.5.0",
     "preact": "^10.26.4",
     "react-bootstrap": "^2.10.9",
     "react-router-dom": "^7.5.3",
