--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/toolpad-core": "^0.1.46",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "dotenv": "^16.5.0",
